--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
-    "moment": "^2.29.4",
+    "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
